--- a/assets/main.css
+++ b/assets/main.css
@@ -775,14 +775,10 @@ body {
   color: var(--tw-prose-code);
   font-weight: 600;
   font-size: 0.875em;
-}
-
-.prose :where(code):not(:where([class~="not-prose"],[class~="not-prose"] *))::before {
-  content: "`";
-}
-
-.prose :where(code):not(:where([class~="not-prose"],[class~="not-prose"] *))::after {
-  content: "`";
+  background: var(--tw-prose-code-bg);
+  padding: 2px 4px;
+  margin: auto 4px;
+  border-radius: 4px;
 }
 
 .prose :where(a code):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
@@ -924,6 +920,7 @@ body {
   --tw-prose-kbd: #111827;
   --tw-prose-kbd-shadows: 17 24 39;
   --tw-prose-code: #111827;
+  --tw-prose-code-bg: #404040;
   --tw-prose-pre-code: #e5e7eb;
   --tw-prose-pre-bg: #1f2937;
   --tw-prose-th-borders: #d1d5db;
@@ -942,6 +939,7 @@ body {
   --tw-prose-invert-kbd: #fff;
   --tw-prose-invert-kbd-shadows: 255 255 255;
   --tw-prose-invert-code: #fff;
+  --tw-prose-invert-code-bg: #404040;
   --tw-prose-invert-pre-code: #d1d5db;
   --tw-prose-invert-pre-bg: rgb(0 0 0 / 50%);
   --tw-prose-invert-th-borders: #4b5563;
@@ -1076,6 +1074,7 @@ body {
   --tw-prose-kbd: #171717;
   --tw-prose-kbd-shadows: 23 23 23;
   --tw-prose-code: #171717;
+  --tw-prose-code-bg: #d4d4d4;
   --tw-prose-pre-code: #e5e5e5;
   --tw-prose-pre-bg: #262626;
   --tw-prose-th-borders: #d4d4d4;
@@ -1782,6 +1781,7 @@ article .highlight > div table tr td:last-of-type {
   --tw-prose-kbd: var(--tw-prose-invert-kbd);
   --tw-prose-kbd-shadows: var(--tw-prose-invert-kbd-shadows);
   --tw-prose-code: var(--tw-prose-invert-code);
+  --tw-prose-code-bg: var(--tw-prose-invert-code-bg);
   --tw-prose-pre-code: var(--tw-prose-invert-pre-code);
   --tw-prose-pre-bg: var(--tw-prose-invert-pre-bg);
   --tw-prose-th-borders: var(--tw-prose-invert-th-borders);
